# crucis

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  crucis-dev  curriculum.md  docker-compose.yml  mkdocs.yml  objective.yaml  pyproject.toml
.cache/plugin/d2/: db
.github/workflows/: docs.yml  publish.yml
constraints/: crucis.yaml  profiles.yaml
crucis/: __main__.py  _compat.py  config.py  defaults.py  dev_bootstrap.py  diagnostics.py  display.py  gepa_optimizer.py  models.py
crucis/cli/: __init__.py  constants.py  runner.py
crucis/cli/tests/: test_runner.py
crucis/constraints/: __init__.py  _class_metrics.py  _module_metrics.py  _python_idioms.py  checker.py  loader.py  plugins.py  registry.py
crucis/constraints/tests/: test_checker.py  test_class_metrics.py  test_loader.py  test_module_metrics.py  test_plugins.py  test_python_idioms.py
crucis/core/: __init__.py  _shared.py  adversary.py  constants.py  curriculum.py  evaluation.py  generation.py  loop.py  planner.py  prompts.py  test_generator.py  verification.py
crucis/core/tests/: conftest.py  test_adversary.py  test_curriculum.py  test_generation.py  test_loop.py  test_planner.py  test_prompts.py  test_test_generator.py
crucis/execution/: __init__.py  constants.py  optimizer.py  sandbox.py
crucis/execution/tests/: test_optimizer.py  test_sandbox.py
crucis/intake/: __init__.py  constants.py  migration.py  objective.py  scaffold.py
crucis/intake/tests/: test_migration.py  test_objective.py  test_scaffold.py
crucis/mcp/: __init__.py  __main__.py  _workspace.py  server.py
crucis/mcp/tests/: conftest.py  test_health.py  test_integration.py  test_tools.py
crucis/persistence/: __init__.py  audit.py  checkpoint.py  constants.py  events.py  policy.py  settings.py
crucis/persistence/tests/: test_audit.py  test_checkpoint.py  test_events.py  test_policy.py  test_settings.py
crucis/prompts/: __init__.py  _filters.py
crucis/prompts/templates/: _macros.jinja2  adversary.jinja2  curriculum.jinja2  evaluation.jinja2  generation.jinja2  mcp_agent_tdd_workflow.jinja2  mcp_setup_crucis.jinja2  mcp_verify_code_quality.jinja2  onboarding.jinja2  plan.jinja2  probe.jinja2  probe_isolated.jinja2  validate.jinja2
crucis/tests/: test_config.py  test_dev_bootstrap.py  test_diagnostics.py  test_display.py  test_llm_integration.py  test_main.py  test_models.py  test_self_constraints.py
designs/: docs.pen
docs/: architecture.md  cli-reference.md  configuration.md  constraints-reference.md  constraints.md  faq.md  glossary.md  index.md  mcp-server.md  objective-reference.md  optimizer.md  quickstart-existing-codebase.md  quickstart-new-project.md  spec-format.md  start-here.md  troubleshooting.md  tutorial.md  use-cases.md  why-crucis.md  workflow.md
docs/assets/javascripts/: copy-feedback.js
docs/assets/stylesheets/: admonitions.css  badges.css  icons.css  mobile.css  stripe.css
docs/overrides/partials/: content.html
examples/intervals/: spec.yaml
hooks/: reading_time.py
tests/: test_format_elapsed.py  test_mask_api_key.py
