[project]
name = "crucis"
version = "0.1.0"
description = "Structured automated feedback for code-generating agents — so they can work longer and more reliably without human intervention."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gilad Morad" },
]
keywords = ["ai", "agents", "code-generation", "testing", "verification", "adversarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "gepa>=0.1.0",
    "jinja2>=3.0",
    "json-repair>=0.30",
    "litellm>=1.64.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "radon>=6.0",
    "rich>=13.0",
    "mcp>=1.2.0",
]

[project.scripts]
crucis = "crucis.__main__:main"
crucis-mcp = "crucis.mcp.server:main"

[project.urls]
Homepage = "https://github.com/gilad12-coder/crucis"
Documentation = "https://gilad12-coder.github.io/crucis/"
Repository = "https://github.com/gilad12-coder/crucis"
Issues = "https://github.com/gilad12-coder/crucis/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-timeout>=2.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.15.0",
    "pyink>=25.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocs-d2-plugin>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crucis"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["PLR2004"]
"conftest.py" = ["PLR2004"]

[tool.pyink]
line-length = 99
target-version = ["py310"]
pyink-indentation = 4
pyink-use-majority-quotes = true

[tool.pytest.ini_options]
testpaths = ["crucis"]
asyncio_mode = "auto"
timeout = 10
markers = [
    "llm: tests that call a real LLM (deselect with -m 'not llm')",
    "slow: tests that take more than a few seconds (deselect with -m 'not slow')",
]
